Suitable for Binder

--- a/SnellsDemo.ipynb
+++ b/SnellsDemo.ipynb
@@ -12,18 +12,36 @@
     "\n",
     "## <center> Michael Lamoureux </center>\n",
     "\n",
-    "#### <center> November 20, 2018 - Updated October 2020</center>\n",
+    "#### <center> November 20, 2018 - Updated October 2020</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "October 2020.\n",
     "\n",
+    "This is a slideshow in Jupyter notebook format.\n",
     "\n",
+    "To start, click on the \"Run All\" arrows above, or select the \"Kernel\" menu item and choose \"Restart & run all.\" Say yes to the confirmation. This will also \"hide\" the code, to make the animations look better.\n",
     "\n",
+    "To get to slideshow mode, click on the icon in the menu bar that looks like a bar chart, as shown here. \n",
+    "<img src=\"slideshow_icon.png\"\n",
+    "     alt=\"Slideshow icon\"\n",
+    "     width=200 />\n",
+    "     \n",
+    "You can advance the slide show using the arrow keys. Exit by clicking on that big \"X\" in the top left corner of the slide show. \n",
     "\n",
-    "\n",
-    "\n"
+    "Note the slide show is still a live Jupyter notebook, so you can run the code and edit while in the slide show. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -52,7 +70,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -725,10 +743,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   },
   "livereveal": {
-   "autolaunch": true,
+   "autolaunch": false,
    "footer": "<h3>M. Lamoureux</h3>",
    "header": "<h1>Waves</h1>"
   }
