Updates to shader code

--- a/SnellsDemo.ipynb
+++ b/SnellsDemo.ipynb
@@ -52,7 +52,7 @@
      "data": {
       "text/html": [
        "<script>\n",
-       "code_show=true; \n",
+       "code_show=false; \n",
        "function code_toggle() {\n",
        " if (code_show){\n",
        " $('div.input').hide();\n",
@@ -78,7 +78,7 @@
    "source": [
     "from IPython.display import HTML\n",
     "HTML('''<script>\n",
-    "code_show=true; \n",
+    "code_show=false; \n",
     "function code_toggle() {\n",
     " if (code_show){\n",
     " $('div.input').hide();\n",
@@ -377,9 +377,9 @@
        "\n",
        "                waveengine.setInitialTextures(waveFunctionTexture0, waveFunctionTexture1, waveFunctionTexture2);\n",
        "\n",
-       "                renderer.show(waveengine.getRenderedTexture());\n",
+       "                renderer.show(waveengine.getRenderedTexture(),4*Math.max(vel_top,vel_bot)**2);\n",
        "                \n",
-       "                nframes = 1000;  // the number of frames we run and show\n",
+       "                nframes = 2000;  // the number of frames we run and show\n",
        "                requestAnimationFrame(nextFrame);\n",
        "            }\n",
        "            setup_and_run(30, 500, 1000);\n",
@@ -629,9 +629,9 @@
     "\n",
     "                waveengine.setInitialTextures(waveFunctionTexture0, waveFunctionTexture1, waveFunctionTexture2);\n",
     "\n",
-    "                renderer.show(waveengine.getRenderedTexture());\n",
+    "                renderer.show(waveengine.getRenderedTexture(),4*Math.max(vel_top,vel_bot)**2);\n",
     "                \n",
-    "                nframes = 1000;  // the number of frames we run and show\n",
+    "                nframes = 2000;  // the number of frames we run and show\n",
     "                requestAnimationFrame(nextFrame);\n",
     "            }\n",
     "            setup_and_run(30, 500, 1000);\n",
