--- a/SnellsDemo.ipynb
+++ b/SnellsDemo.ipynb
@@ -52,7 +52,7 @@
      "data": {
       "text/html": [
        "<script>\n",
-       "code_show=false; \n",
+       "code_show=true; \n",
        "function code_toggle() {\n",
        " if (code_show){\n",
        " $('div.input').hide();\n",
