--- a/SnellsDemo_v1.ipynb
+++ b/SnellsDemo_v1.ipynb
@@ -338,7 +338,7 @@
        "                    waveengine.timestep();\n",
        "                }\n",
        "\n",
-       "                renderer.show(waveengine.getRenderedTexture());\n",
+       "                renderer.show(waveengine.getRenderedTexture(),4*Math.max(vel_top,vel_bot)**2);\n",
        "                nframes--;\n",
        "                if (nframes>0) {\n",
        "                    requestAnimationFrame(nextFrame);\n",
