--- a/TravelingWave-anim.ipynb
+++ b/TravelingWave-anim.ipynb
@@ -21,6 +21,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Getting Started!\n",
+    "\n",
+    "Select the menu item Kernel/Restart and Run All. This will run all the code in the notebook, making the GUI at the last cell available to use. \n",
+    "\n"
+   ]
+  },
+{
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Transmission lines\n",
     "\n",
     "A transmission line is something as simple as a length of coaxial cable, where you put some input signal in one end and there is a load at the other end that absorbs the signal as the output of the line. The load could be something as simple as a resistor or inductor; often it is a piece of equipment like an amplifier or an antenna. \n",
